1999-05-16  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* configure.in: Add checks for -lpng and <png.h>.

1999-05-15  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* configure.in: Set VERSION to 1.4.0.

	* main.cc: Include <sys/stat.h>.

	* NEWS: Modified.

	* configure.in: Add check for mkdir.
	Set VERSION to 1.3.1.

	* main.cc (main): Make ~/.rglclock directory.

	* clockoptions.cc (create_widget): Put unit after the spin button.

	* glclock.cc (update): Draw only for drawable widgets.

	* rglclock.1: Remove keyword substitutions for Package and
	Version.

	* configure.in: Remove PRCS keyword substitutions.

	* TODO: Modified.

1999-05-04  Kaz Sasayama  <Kaz.Sasayama@hypercore.co.jp>

	* TODO: Modified.

	* main.cc (main): Add p as a callback of c.
	(main): Remove save before exit.

	* profile.h (options_callback): Add glclock::options_callback to
	virtual base class.

	* profile.cc (options_changed): New function.

	* glclock.cc (remove_callback, add_callback): New functions.
	(set_update_rate): Call all callbacks.

	* glclock.h (class glclock): Add struct options_callback.
	(class glclock): Add member callbacks.

	* Makefile.am (libclock_a_SOURCES): Move glclock.cc and about.cc
	from rglclock_SOURCES.

	* glclock.cc (glclock): Remove creation of a item factory.
	(handle_button_event): Remove the case for button-3.
	(menu_quit, menu_about, edit_options): Removed.

	* glclock.h (class glclock): Remove members for the popup menu.

	* main.cc (edit_options, describe): New function.
	(create_widget): Modify the menu.

	* TODO: Modified.

	* NEWS: Modified.

	* main.cc (main): Save and restore options.

	* configure.in: Add checks for <gnome-xml/parser.h> and -lxml,
	-lz.

	* Makefile.am (rglclock_SOURCES): Add profile.cc.
	(noinst_HEADERS): Add profile.h.

	* profile.h: New file.

	* profile.cc: New file.

	* main.cc (create_widget): New function.
	(main): Use create_widget.
	(main): Make the glclock object block-local.
