@@ -67,36 +67,45 @@ clock_options_dialog::general_options_page::create_widget()
   I(GTK_IS_VBOX(vbox));
   gtk_container_set_border_width(GTK_CONTAINER(vbox), 10);
   {
-    GtkWidget *table = gtk_table_new(2, 1, FALSE);
+    GtkWidget *hbox1 = gtk_hbox_new(false, 0);
     {
-      const char *text1 = _("Update rate: ");
-      GtkWidget *label1 = gtk_label_new(text1);
+      GtkWidget *label1 = gtk_label_new(_("Update rate: "));
       gtk_widget_show(label1);
-      gtk_table_attach_defaults(GTK_TABLE(table), label1,
-				0, 1, 0, 1);
+      gtk_box_pack_start(GTK_BOX(hbox1), label1, false, false, 0);
 
-      GtkWidget *hbox1 = gtk_hbox_new(false, 0);
-      {
-	int rate = target->update_rate();
-	GtkObject *update_adjust = gtk_adjustment_new(rate, 5, 30, 1, 5, 1);
-	GtkWidget *update_input
-	  = gtk_spin_button_new(GTK_ADJUSTMENT(update_adjust), 1, 0);
-	gtk_widget_show(update_input);
-	gtk_object_set_data(GTK_OBJECT(vbox), "update_input", update_input);
-	gtk_box_pack_start(GTK_BOX(hbox1), update_input, false, false, 0);
+      int rate = target->update_rate();
+      GtkObject *update_adjust = gtk_adjustment_new(rate, 5, 30, 1, 5, 1);
+      GtkWidget *update_input
+	= gtk_spin_button_new(GTK_ADJUSTMENT(update_adjust), 1, 0);
+      gtk_object_set_data(GTK_OBJECT(vbox), "update_input", update_input);
+      gtk_widget_show(update_input);
+      gtk_box_pack_start(GTK_BOX(hbox1), update_input, false, false, 0);
 
-	/* Unit name for update rate */
-	const char *unit_text = _("Hz");
-	GtkWidget *unit_label = gtk_label_new(unit_text);
-	gtk_widget_show(unit_label);
-	gtk_box_pack_start(GTK_BOX(hbox1), unit_label, false, false, 0);
-      }
-      gtk_widget_show(hbox1);
-      gtk_table_attach_defaults(GTK_TABLE(table), hbox1,
-				1, 2, 0, 1);
+      /* Unit name for update rate */
+      GtkWidget *unit_label = gtk_label_new(_("Hz"));
+      gtk_widget_show(unit_label);
+      gtk_box_pack_start(GTK_BOX(hbox1), unit_label, false, false, 0);
     }
-    gtk_widget_show(table);
-    gtk_box_pack_start(GTK_BOX(vbox), table, FALSE, FALSE, 0);
+    gtk_widget_show(hbox1);
+    gtk_box_pack_start(GTK_BOX(vbox), hbox1, false, false, 0);
+
+    GtkWidget *hbox2 = gtk_hbox_new(false, 0);
+    {
+      GtkWidget *check1
+	= gtk_check_button_new_with_label(_("Map texture file: "));
+      gtk_widget_show(check1);
+      gtk_box_pack_start(GTK_BOX(hbox2), check1, false, false, 0);
+
+      GtkWidget *entry1 = gtk_entry_new();
+      gtk_widget_show(entry1);
+      gtk_box_pack_start(GTK_BOX(hbox2), entry1, true, true, 0);
+
+      GtkWidget *button1 = gtk_button_new_with_label(_("Select..."));
+      gtk_widget_show(button1);
+      gtk_box_pack_start(GTK_BOX(hbox2), button1, false, false, 0);      
+    }
+    gtk_widget_show(hbox2);
+    gtk_box_pack_start(GTK_BOX(vbox), hbox2, false, false, 0);
   }
 
   return vbox;
